--- a/Real-Analysis-MIT-18100A/Exercises.tex
+++ b/Real-Analysis-MIT-18100A/Exercises.tex
@@ -3,6 +3,7 @@
 \usepackage{amssymb}
 \usepackage{csquotes}
 \usepackage{empheq}
+\usepackage{float}
 \usepackage[letterpaper, textwidth=7.5in, textheight=8in]{geometry}
 \usepackage{parskip}
 \usepackage{xcolor}
@@ -339,6 +340,388 @@ Then we examine the proper subset $A = \{ x \in \mathbb{N}: IsOdd(x) \}$:
 \end{itemize}
 
 Therefore, $A$ under this $\prec$ relation has $sup A$ but $sup A \notin A$.
+
+% ******************************
+\subsection{Exercise 1.1.8}
+% ******************************
+
+% ------------------------------
+\subsubsection{Description}
+% ------------------------------
+
+Let $F := \{ 0, 1, 2 \}$:
+\begin{itemize}
+  \item a) Prove that there is exactly one way to define addition and multiplication so that $F$ is a field if 0 and 1
+        have their usual meaning of (A4) and (M4).
+  \item b) Show that $F$ cannot be an ordered field.
+\end{itemize}
+
+% ------------------------------
+\subsubsection{Proof (a)}
+% ------------------------------
+
+The exercise description doesn't say this explicitly but I believe the following are implicated:
+\begin{itemize}
+  \item $0 = 0$
+  \item $1 = 1$
+  \item $2 = 2$
+  \item $0 \ne 1$
+  \item $0 \ne 2$
+  \item $1 \ne 2$
+\end{itemize}
+
+\textbf{(1a)} Because $F$ is a field, and 0 and 1 have their usual meaning of (A4) and (M4), that means $F$ must satisfy Definition
+1.1.5 (A1): $\forall x, y \in F. (x + y \in F)$. Therefore:
+\begin{enumerate}
+  \item $0 + 0 = 0 \in F$
+  \item $0 + 1 = 1 \in F$
+  \item $0 + 2 = 2 \in F$
+  \item $1 + 0 = 1 \in F$
+  \item $1 + 1 = A \in F$
+  \item $1 + 2 = B \in F$
+  \item $2 + 0 = 2 \in F$
+  \item $2 + 1 = 1 + 2 = B \in F$ (Definition 1.1.5 (A2))
+  \item $2 + 2 = C \in F$
+\end{enumerate}
+
+$A, B, C$ can be one of $0, 1, 2$ independently. Therefore, there are totally $3^3 = 27$ possible assignments:
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c|c|ll}
+    \cline{1-3}
+    A        & B        & C        &  & \\ [1ex] \cline{1-3}
+    0        & 0        & 0        &  & \\ [0.5ex] \cline{1-3}
+    0        & 0        & 1        &  & \\ [0.5ex] \cline{1-3}
+    0        & 0        & 2        &  & \\ [0.5ex] \cline{1-3}
+    0        & 1        & 0        &  & \\ [0.5ex] \cline{1-3}
+    0        & 1        & 1        &  & \\ [0.5ex] \cline{1-3}
+    0        & 1        & 2        &  & \\ [0.5ex] \cline{1-3}
+    $\ldots$ & $\ldots$ & $\ldots$ &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Possible assignments for A, B, C}
+  \label{table:1.1.8-1a}
+\end{table}
+
+We just don't know which possible assignment can make $F$ a field and will need to figure that out.
+
+\textbf{(1b)} Let's then examine Definition 1.1.5 (A5) because (A5) is simpler than (A3). (A5) says $\forall x \in F,
+  \exists y \in F. (x + y = 0)$.
+
+If we examine the expressions in (1a), we can see that:
+\begin{itemize}
+  \item $\because 0 + 0 = 0, 0 + 1 = 1 \ne 0, 0 + 2 = 2 \ne 0$, $\therefore$ $0$ is the ``y'' of itself.
+  \item $\because 1 + 0 = 1 \ne 0, 1 + 1 = A, 1 + 2 = B$, $\therefore$ one of $A$ or $B$ must be $0$.
+  \item $\because 2 + 0 = 2 \ne 0, 2 + 1 = 1 + 2 = B, 2 + 2 = C$, $\therefore$ one of $B$ or $C$ must be $0$.
+\end{itemize}
+
+That reduces table \ref{table:1.1.8-1a} to only 11 possibilities:
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c|c|ll}
+    \cline{1-3}
+    A & B & C &  & \\ [1ex] \cline{1-3}
+    0 & 0 & 0 &  & \\ [0.5ex] \cline{1-3}
+    0 & 0 & 1 &  & \\ [0.5ex] \cline{1-3}
+    0 & 0 & 2 &  & \\ [0.5ex] \cline{1-3}
+    0 & 1 & 0 &  & \\ [0.5ex] \cline{1-3}
+    0 & 2 & 0 &  & \\ [0.5ex] \cline{1-3}
+    1 & 0 & 0 &  & \\ [0.5ex] \cline{1-3}
+    1 & 0 & 1 &  & \\ [0.5ex] \cline{1-3}
+    1 & 0 & 2 &  & \\ [0.5ex] \cline{1-3}
+    2 & 0 & 0 &  & \\ [0.5ex] \cline{1-3}
+    2 & 0 & 1 &  & \\ [0.5ex] \cline{1-3}
+    2 & 0 & 2 &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Possible assignments for A, B, C (reduced)}
+  \label{table:1.1.8-1b}
+\end{table}
+
+\textbf{(1c)} Because $F$ is a field, $F$ must also satisfy Definition 1.1.5 (A3): $\forall x, y, z \in F. ((x + y) + z
+  = x + (y + z))$. There are totally $3^3 = 27$ possible cases:
+\begin{enumerate}
+  \item $(0 + 0) + 0 = 0 + (0 + 0) = 0$
+  \item $(0 + 0) + 1 = 0 + (0 + 1) = 1$
+  \item $(0 + 0) + 2 = 0 + (0 + 2) = 2$
+  \item $(0 + 1) + 0 = 0 + (1 + 0) = 1$
+  \item $(0 + 1) + 1 = 0 + (1 + 1) = A$
+  \item $(0 + 1) + 2 = 0 + (1 + 2) = B$
+  \item $(0 + 2) + 0 = 0 + (2 + 0) = 2$
+  \item $(0 + 2) + 1 = 0 + (2 + 1) = B$
+  \item $(0 + 2) + 2 = 0 + (2 + 2) = C$
+  \item $(1 + 0) + 0 = 1 + (0 + 0) = 1$
+  \item $(1 + 0) + 1 = 1 + (0 + 1) = A$
+  \item $(1 + 0) + 2 = 1 + (0 + 2) = B$
+  \item $(1 + 1) + 0 = 1 + (1 + 0) = A$
+  \item $(1 + 1) + 1 = 1 + (1 + 1) = A + 1 = 1 + A$
+  \item $(1 + 1) + 2 = 1 + (1 + 2) \rightarrow A + 2 = 1 + B$
+  \item $(1 + 2) + 0 = 1 + (2 + 0) = B$
+  \item $(1 + 2) + 1 = 1 + (2 + 1) = B + 1 = 1 + B$
+  \item $(1 + 2) + 2 = 1 + (2 + 2) = B + 2 = 1 + C$
+  \item $(2 + 0) + 0 = 2 + (0 + 0) = 2$
+  \item $(2 + 0) + 1 = 2 + (0 + 1) = B$
+  \item $(2 + 0) + 2 = 2 + (0 + 2) = C$
+  \item $(2 + 1) + 0 = 2 + (1 + 0) = B$
+  \item $(2 + 1) + 1 = 2 + (1 + 1) \rightarrow B + 1 = 2 + A$
+  \item $(2 + 1) + 2 = 2 + (1 + 2) = B + 2 = 2 + B$
+  \item $(2 + 2) + 0 = 2 + (2 + 0) = C$
+  \item $(2 + 2) + 1 = 2 + (2 + 1) \rightarrow C + 1 = 2 + B$
+  \item $(2 + 2) + 2 = 2 + (2 + 2) = C + 2 = 2 + C$
+\end{enumerate}
+
+Therefore, $A, B, C$ must also satisfy the following under the addition operation:
+
+\begin{empheq}[left=\empheqlbrace]{align}
+  &A + 2 = 1 + B \\
+  &B + 2 = 1 + C
+\end{empheq}
+
+Equation (1.1) implies that $A$ and $B$ can't be $0$ at the same time, because otherwise, the left side would be
+$0 + 2 = 2$ and the right side be $1 + 0 = 1$, but we know that $2 \ne 1$. Similarly, equation (1.2) implies that $B$
+and $C$ can't be $0$ at the same time.
+
+Equation (1.1) also implies that: when $B = 0$, $A \ne 1$. Suppose $B = 0 \land A = 1$, then the left side would be
+$1 + 2 = B = 0$ and the right side be $1 + 0 = 1$, but we know $0 \ne 1$.
+
+Equation (1.1) also implies that: when $B = 1$, $A \ne 0$. Suppose $B = 1 \land A = 0$, then the left side would be
+$0 + 2 = 2$ and the right side be $1 + 1 = A = 0$, but we know $2 \ne 0$.
+
+These implications can further reduce table \ref{table:1.1.8-1b} down to 3 possibilities:
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c|c|ll}
+    \cline{1-3}
+    A & B & C &  & \\ [1ex] \cline{1-3}
+    0 & 2 & 0 &  & \\ [0.5ex] \cline{1-3}
+    2 & 0 & 1 &  & \\ [0.5ex] \cline{1-3}
+    2 & 0 & 2 &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Possible assignments for A, B, C (reduced)}
+  \label{table:1.1.8-1c}
+\end{table}
+
+Now we can verify each possibility:
+\begin{itemize}
+  \item $(A = 0, B = 2, C = 0)$ doesn't work: $C = 0 \rightarrow 2 + 2 = 0$. In equation (1.2), the left side would be
+        $2 + 2 = C = 0$ and the right side would be $1 + 0 = 1$. But we know $0 \ne 1$.
+  \item $(A = 2, B = 0, C = 1)$ works:
+        \begin{itemize}
+          \item Equation (1.1): Left side is $2 + 2 = C = 1$; right side is $1 + 0 = 1$. No contradiction.
+          \item Equation (1.2): Left side is $0 + 2 = 2$; right side is $1 + 1 = A = 2$. No contradiction.
+        \end{itemize}
+  \item $(A = 2, B = 0, C = 2)$ doesn't work: In equation (1.2), the left side is $0 + 2 = 2$; the right side is
+        $1 + 2 = B = 0$. But we know $2 \ne 0$.
+\end{itemize}
+
+Therefore, $A = 2, B = 0, C = 1$. In other words: this is the only definition for the addition operation that makes
+$F$ a field as defined as follows:
+\begin{enumerate}
+  \item $0 + 0 = 0 \in F$
+  \item $0 + 1 = 1 \in F$
+  \item $0 + 2 = 2 \in F$
+  \item $1 + 0 = 1 \in F$
+  \item $1 + 1 = 2 \in F$
+  \item $1 + 2 = 0 \in F$
+  \item $2 + 0 = 2 \in F$
+  \item $2 + 1 = 1 + 2 = 0 \in F$
+  \item $2 + 2 = 1 \in F$
+\end{enumerate}
+
+\textbf{(2a)}: Because $F$ is a field, and 0 and 1 have their usual meaning of (A4) and (M4), that means $F$ must
+satisfy Definition 1.1.5 (M1): $\forall x, y \in F. (x \cdot y \in F)$. Therefore:
+\begin{enumerate}
+  \item $0 \cdot 0 = A \in F$
+  \item $0 \cdot 1 = 1 \cdot 0 = 0 \in F$ (Definition 1.1.5 (M2), (M4))
+  \item $0 \cdot 2 = B \in F$
+  \item $1 \cdot 0 = 0 \in F$
+  \item $1 \cdot 1 = 1 \in F$
+  \item $1 \cdot 2 = 2 \in F$
+  \item $2 \cdot 0 = 0 \cdot 2 = B \in F$
+  \item $2 \cdot 1 = 1 \cdot 2 = 2 \in F$
+  \item $2 \cdot 2 = C \in F$
+\end{enumerate}
+
+$A, B, C$ can be one of $0, 1, 2$ independently. Therefore, there are totally $3^3 = 27$ possible assignments:
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c|c|ll}
+    \cline{1-3}
+    A        & B        & C        &  & \\ [1ex] \cline{1-3}
+    0        & 0        & 0        &  & \\ [0.5ex] \cline{1-3}
+    0        & 0        & 1        &  & \\ [0.5ex] \cline{1-3}
+    0        & 0        & 2        &  & \\ [0.5ex] \cline{1-3}
+    0        & 1        & 0        &  & \\ [0.5ex] \cline{1-3}
+    0        & 1        & 1        &  & \\ [0.5ex] \cline{1-3}
+    0        & 1        & 2        &  & \\ [0.5ex] \cline{1-3}
+    $\ldots$ & $\ldots$ & $\ldots$ &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Possible assignments for A, B, C}
+  \label{table:1.1.8-2a}
+\end{table}
+
+We just don't know which possible assignment can make $F$ a field and will need to figure that out.
+
+\textbf{(2b)} Let's then examine Definition 1.1.5 (M5) because (M5) is simpler than (M3). (M5) says $\forall x \in F,
+  \exists y \in F. (x \cdot y = 1)$.
+
+If we examine the expressions in (2a), we can see that:
+\begin{itemize}
+  \item $\because 0 \cdot 0 = A; 0 \cdot 1 = 0 \ne 1; 0 \cdot 2 = B$, $\therefore$ one of $A$ and $B$ must be 1.
+  \item $\because 1 \cdot 0 = 0 \ne 1; 1 \cdot 1 = 1; 1 \cdot 2 = 2 \ne 1$, $\therefore$ 1 is the ``y'' of itself.
+  \item $\because 2 \cdot 0 = B; 2 \cdot 1 = 2 \ne 1; 2 \cdot 2 = C$, $therefore$ one of $B$ and $C$ must be 1.
+\end{itemize}
+
+That reduces table \ref{table:1.1.8-2a} to only 11 possibilities:
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c|c|ll}
+    \cline{1-3}
+    A & B & C &  & \\ [1ex] \cline{1-3}
+    0 & 1 & 0 &  & \\ [0.5ex] \cline{1-3}
+    0 & 1 & 1 &  & \\ [0.5ex] \cline{1-3}
+    0 & 1 & 2 &  & \\ [0.5ex] \cline{1-3}
+    1 & 0 & 1 &  & \\ [0.5ex] \cline{1-3}
+    1 & 1 & 0 &  & \\ [0.5ex] \cline{1-3}
+    1 & 1 & 1 &  & \\ [0.5ex] \cline{1-3}
+    1 & 1 & 2 &  & \\ [0.5ex] \cline{1-3}
+    1 & 2 & 1 &  & \\ [0.5ex] \cline{1-3}
+    2 & 1 & 0 &  & \\ [0.5ex] \cline{1-3}
+    2 & 1 & 1 &  & \\ [0.5ex] \cline{1-3}
+    2 & 1 & 2 &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Possible assignments for A, B, C (reduced)}
+  \label{table:1.1.8-2b}
+\end{table}
+
+\textbf{(2c)} Because $F$ is a field, $F$ must also satisfy Definition 1.1.5 (M3): $\forall x, y, z \in F. ((x \cdot y)
+  \cdot z = x \cdot (y \cdot z))$. There are totally $3^3 = 27$ possible cases:
+\begin{enumerate}
+  \item $(0 \cdot 0) \cdot 0 = 0 \cdot (0 \cdot 0) = 0 \cdot A$
+  \item $(0 \cdot 0) \cdot 1 = 0 \cdot (0 \cdot 1) = A$
+  \item $(0 \cdot 0) \cdot 2 = 0 \cdot (0 \cdot 2) = A \cdot 2 = 0 \cdot B$
+  \item $(0 \cdot 1) \cdot 0 = 0 \cdot (1 \cdot 0) = A$
+  \item $(0 \cdot 1) \cdot 1 = 0 \cdot (1 \cdot 1) = 0$
+  \item $(0 \cdot 1) \cdot 2 = 0 \cdot (1 \cdot 2) = B$
+  \item $(0 \cdot 2) \cdot 0 = 0 \cdot (2 \cdot 0) = 0 \cdot B$
+  \item $(0 \cdot 2) \cdot 1 = 0 \cdot (2 \cdot 1) = B$
+  \item $(0 \cdot 2) \cdot 2 = 0 \cdot (2 \cdot 2) = B \cdot 2 = 0 \cdot C$
+  \item $(1 \cdot 0) \cdot 0 = 1 \cdot (0 \cdot 0) = A$
+  \item $(1 \cdot 0) \cdot 1 = 1 \cdot (0 \cdot 1) = 0$
+  \item $(1 \cdot 0) \cdot 2 = 1 \cdot (0 \cdot 2) = B$
+  \item $(1 \cdot 1) \cdot 0 = 1 \cdot (1 \cdot 0) = 0$
+  \item $(1 \cdot 1) \cdot 1 = 1 \cdot (1 \cdot 1) = 1$
+  \item $(1 \cdot 1) \cdot 2 = 1 \cdot (1 \cdot 2) = 2$
+  \item $(1 \cdot 2) \cdot 0 = 1 \cdot (2 \cdot 0) = B$
+  \item $(1 \cdot 2) \cdot 1 = 1 \cdot (2 \cdot 1) = 2$
+  \item $(1 \cdot 2) \cdot 2 = 1 \cdot (2 \cdot 2) = C$
+  \item $(2 \cdot 0) \cdot 0 = 2 \cdot (0 \cdot 0) = B \cdot 0 = 2 \cdot A = A \cdot 2 = 0 \cdot B$
+  \item $(2 \cdot 0) \cdot 1 = 2 \cdot (0 \cdot 1) = B$
+  \item $(2 \cdot 0) \cdot 2 = 2 \cdot (0 \cdot 2) = B \cdot 2$
+  \item $(2 \cdot 1) \cdot 0 = 2 \cdot (1 \cdot 0) = B$
+  \item $(2 \cdot 1) \cdot 1 = 2 \cdot (1 \cdot 1) = 2$
+  \item $(2 \cdot 1) \cdot 2 = 2 \cdot (1 \cdot 2) = C$
+  \item $(2 \cdot 2) \cdot 0 = 2 \cdot (2 \cdot 0) = C \cdot 0 = 2 \cdot B = B \cdot 2 = 0 \cdot C$
+  \item $(2 \cdot 2) \cdot 1 = 2 \cdot (2 \cdot 1) = C$
+  \item $(2 \cdot 2) \cdot 2 = 2 \cdot (2 \cdot 2) = 2 \cdot C$
+\end{enumerate}
+
+Therefore, $A, B, C$ must also satisfy the following under the multiplication operation:
+
+\begin{empheq}[left=\empheqlbrace]{align}
+  &A \cdot 2 = 0 \cdot B \\
+  &B \cdot 2 = 0 \cdot C
+\end{empheq}
+
+Equation (1.3) implies that $A$ and $B$ can't be 1 at the same time, because otherwise, the left side would be $1 \cdot
+  2 = 2$ while the right side be $0 \cdot 1 = 0$, but we know that $2 \ne 0$. Similarly, equation (1.4) implies that
+$B$ and $C$ can't be 1 at the same time.
+
+Equation (1.3) also implies that: when $B = 1$, $A \ne 0$. Suppose $B = 1 \land A = 0$, then the left side would be
+$0 \cdot 2 = B = 1$ and the right side be $0 \cdot 1 = 0$. But we know $1 \ne 0$.
+
+These implications can further reduce table \ref{table:1.1.8-2b} down to 3 possibilities:
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c|c|ll}
+    \cline{1-3}
+    A & B & C &  & \\ [1ex] \cline{1-3}
+    1 & 2 & 1 &  & \\ [0.5ex] \cline{1-3}
+    2 & 1 & 0 &  & \\ [0.5ex] \cline{1-3}
+    2 & 1 & 2 &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Possible assignments for A, B, C (reduced)}
+  \label{table:1.1.8-2c}
+\end{table}
+
+Now we can verify each possibility:
+\begin{itemize}
+  \item $(A = 1, B = 2, C = 1)$ doesn't work: In equation (1.4), the left side is $2 \cdot 2 = C = 1$ and the right side
+        be $0 \cdot 1 = 0$. But we know $1 \ne 0$.
+  \item $(A = 2, B = 1, C = 0)$ works:
+        \begin{itemize}
+          \item Equation (1.3): Left side is $2 \cdot 2 = C = 0$; right side is $0 \cdot 1 = 0$. No contradiction.
+          \item Equation (1.4): Left side is $1 \cdot 2 = 2$; right side is $0 \cdot 0 = A = 2$. No contradiction.
+        \end{itemize}
+  \item $(A = 2, B = 1, C = 2)$ doesn't work: In equation (1.3), the left side is $2 \cdot 2 = C = 2$ and the right side
+        be $0 \cdot 1 = 0$. But we know $2 \ne 0$.
+\end{itemize}
+
+Therefore, $A = 2, B = 1, C = 0$. In other words, this is the only definition for the multiplication operation that
+makes $F$ a field as defined as follows:
+\begin{enumerate}
+  \item $0 \cdot 0 = 2 \in F$
+  \item $0 \cdot 1 = 0 \in F$ (Definition 1.1.5 (M2), (M4))
+  \item $0 \cdot 2 = 1 \in F$
+  \item $1 \cdot 0 = 0 \in F$
+  \item $1 \cdot 1 = 1 \in F$
+  \item $1 \cdot 2 = 2 \in F$
+  \item $2 \cdot 0 = 1 \in F$
+  \item $2 \cdot 1 = 2 \in F$
+  \item $2 \cdot 2 = 0 \in F$
+\end{enumerate}
+
+\textbf{(3)} Given the addition and multiplication defined above, we need to verify that Definition 1.1.5 (D) holds,
+which says $\forall x y, z \in F. (x \cdot (y + z) = x \cdot y + x \cdot z)$:
+\begin{enumerate}
+  \item $0 \cdot (0 + 0) = 0 \cdot 0 + 0 \cdot 0$
+  \item $0 \cdot (0 + 1) = 0 \cdot 0 + 0 \cdot 1$ (\colorbox{red}{wrong})
+  \item $0 \cdot (0 + 2) = 0 \cdot 0 + 0 \cdot 2$
+  \item $0 \cdot (1 + 0) = 0 \cdot 1 + 0 \cdot 0$
+  \item $0 \cdot (1 + 1) = 0 \cdot 1 + 0 \cdot 1$
+  \item $0 \cdot (1 + 2) = 0 \cdot 1 + 0 \cdot 2$
+  \item $0 \cdot (2 + 0) = 0 \cdot 2 + 0 \cdot 0$
+  \item $0 \cdot (2 + 1) = 0 \cdot 2 + 0 \cdot 1$
+  \item $0 \cdot (2 + 2) = 0 \cdot 2 + 0 \cdot 2$
+  \item $1 \cdot (0 + 0) = 1 \cdot 0 + 1 \cdot 0$
+  \item $1 \cdot (0 + 1) = 1 \cdot 0 + 1 \cdot 1$
+  \item $1 \cdot (0 + 2) = 1 \cdot 0 + 1 \cdot 2$
+  \item $1 \cdot (1 + 0) = 1 \cdot 1 + 1 \cdot 0$
+  \item $1 \cdot (1 + 1) = 1 \cdot 1 + 1 \cdot 1$
+  \item $1 \cdot (1 + 2) = 1 \cdot 1 + 1 \cdot 2$
+  \item $1 \cdot (2 + 0) = 1 \cdot 2 + 1 \cdot 0$
+  \item $1 \cdot (2 + 1) = 1 \cdot 2 + 1 \cdot 1$
+  \item $1 \cdot (2 + 2) = 1 \cdot 2 + 1 \cdot 2$
+  \item $2 \cdot (0 + 0) = 2 \cdot 0 + 2 \cdot 0$
+  \item $2 \cdot (0 + 1) = 2 \cdot 0 + 2 \cdot 1$
+  \item $2 \cdot (0 + 2) = 2 \cdot 0 + 2 \cdot 2$
+  \item $2 \cdot (1 + 0) = 2 \cdot 1 + 2 \cdot 0$
+  \item $2 \cdot (1 + 1) = 2 \cdot 1 + 2 \cdot 1$
+  \item $2 \cdot (1 + 2) = 2 \cdot 1 + 2 \cdot 2$
+  \item $2 \cdot (2 + 0) = 2 \cdot 2 + 2 \cdot 0$
+  \item $2 \cdot (2 + 1) = 2 \cdot 2 + 2 \cdot 1$
+  \item $2 \cdot (2 + 2) = 2 \cdot 2 + 2 \cdot 2$
+\end{enumerate}
+
+% ------------------------------
+\subsubsection{Proof (b)}
+% ------------------------------
+
+\colorbox{red}{TODO(ywen)}: Prove (b).
 
 % =============================================================================
 %
