--- a/Real-Analysis-MIT-18100A/Exercises.tex
+++ b/Real-Analysis-MIT-18100A/Exercises.tex
@@ -376,7 +376,7 @@ The exercise description doesn't say this explicitly but I believe the following
   \item $0 + 0 = 0 \in F$
   \item $0 + 1 = 1 \in F$
   \item $0 + 2 = 2 \in F$
-  \item $1 + 0 = 1 \in F$
+  \item $1 + 0 = 0 + 1 = 1 \in F$ (Definition 1.1.5 (A2))
   \item $1 + 1 = A \in F$
   \item $1 + 2 = B \in F$
   \item $2 + 0 = 2 \in F$
@@ -571,7 +571,7 @@ If we examine the expressions in (2a), we can see that:
 \begin{itemize}
   \item $\because 0 \cdot 0 = A; 0 \cdot 1 = 0 \ne 1; 0 \cdot 2 = B$, $\therefore$ one of $A$ and $B$ must be 1.
   \item $\because 1 \cdot 0 = 0 \ne 1; 1 \cdot 1 = 1; 1 \cdot 2 = 2 \ne 1$, $\therefore$ 1 is the ``y'' of itself.
-  \item $\because 2 \cdot 0 = B; 2 \cdot 1 = 2 \ne 1; 2 \cdot 2 = C$, $therefore$ one of $B$ and $C$ must be 1.
+  \item $\because 2 \cdot 0 = B; 2 \cdot 1 = 2 \ne 1; 2 \cdot 2 = C$, $\therefore$ one of $B$ and $C$ must be 1.
 \end{itemize}
 
 That reduces table \ref{table:1.1.8-2a} to only 11 possibilities:
@@ -602,13 +602,13 @@ That reduces table \ref{table:1.1.8-2a} to only 11 possibilities:
 \begin{enumerate}
   \item $(0 \cdot 0) \cdot 0 = 0 \cdot (0 \cdot 0) = 0 \cdot A$
   \item $(0 \cdot 0) \cdot 1 = 0 \cdot (0 \cdot 1) = A$
-  \item $(0 \cdot 0) \cdot 2 = 0 \cdot (0 \cdot 2) = A \cdot 2 = 0 \cdot B$
+  \item $(0 \cdot 0) \cdot 2 = 0 \cdot (0 \cdot 2) \rightarrow A \cdot 2 = 0 \cdot B$
   \item $(0 \cdot 1) \cdot 0 = 0 \cdot (1 \cdot 0) = A$
   \item $(0 \cdot 1) \cdot 1 = 0 \cdot (1 \cdot 1) = 0$
   \item $(0 \cdot 1) \cdot 2 = 0 \cdot (1 \cdot 2) = B$
   \item $(0 \cdot 2) \cdot 0 = 0 \cdot (2 \cdot 0) = 0 \cdot B$
   \item $(0 \cdot 2) \cdot 1 = 0 \cdot (2 \cdot 1) = B$
-  \item $(0 \cdot 2) \cdot 2 = 0 \cdot (2 \cdot 2) = B \cdot 2 = 0 \cdot C$
+  \item $(0 \cdot 2) \cdot 2 = 0 \cdot (2 \cdot 2) \rightarrow B \cdot 2 = 0 \cdot C$
   \item $(1 \cdot 0) \cdot 0 = 1 \cdot (0 \cdot 0) = A$
   \item $(1 \cdot 0) \cdot 1 = 1 \cdot (0 \cdot 1) = 0$
   \item $(1 \cdot 0) \cdot 2 = 1 \cdot (0 \cdot 2) = B$
@@ -618,13 +618,13 @@ That reduces table \ref{table:1.1.8-2a} to only 11 possibilities:
   \item $(1 \cdot 2) \cdot 0 = 1 \cdot (2 \cdot 0) = B$
   \item $(1 \cdot 2) \cdot 1 = 1 \cdot (2 \cdot 1) = 2$
   \item $(1 \cdot 2) \cdot 2 = 1 \cdot (2 \cdot 2) = C$
-  \item $(2 \cdot 0) \cdot 0 = 2 \cdot (0 \cdot 0) = B \cdot 0 = 2 \cdot A = A \cdot 2 = 0 \cdot B$
+  \item $(2 \cdot 0) \cdot 0 = 2 \cdot (0 \cdot 0) \rightarrow B \cdot 0 = 2 \cdot A \rightarrow A \cdot 2 = 0 \cdot B$
   \item $(2 \cdot 0) \cdot 1 = 2 \cdot (0 \cdot 1) = B$
   \item $(2 \cdot 0) \cdot 2 = 2 \cdot (0 \cdot 2) = B \cdot 2$
   \item $(2 \cdot 1) \cdot 0 = 2 \cdot (1 \cdot 0) = B$
   \item $(2 \cdot 1) \cdot 1 = 2 \cdot (1 \cdot 1) = 2$
   \item $(2 \cdot 1) \cdot 2 = 2 \cdot (1 \cdot 2) = C$
-  \item $(2 \cdot 2) \cdot 0 = 2 \cdot (2 \cdot 0) = C \cdot 0 = 2 \cdot B = B \cdot 2 = 0 \cdot C$
+  \item $(2 \cdot 2) \cdot 0 = 2 \cdot (2 \cdot 0) \rightarrow C \cdot 0 = 2 \cdot B \rightarrow B \cdot 2 = 0 \cdot C$
   \item $(2 \cdot 2) \cdot 1 = 2 \cdot (2 \cdot 1) = C$
   \item $(2 \cdot 2) \cdot 2 = 2 \cdot (2 \cdot 2) = 2 \cdot C$
 \end{enumerate}
@@ -642,6 +642,9 @@ $B$ and $C$ can't be 1 at the same time.
 
 Equation (1.3) also implies that: when $B = 1$, $A \ne 0$. Suppose $B = 1 \land A = 0$, then the left side would be
 $0 \cdot 2 = B = 1$ and the right side be $0 \cdot 1 = 0$. But we know $1 \ne 0$.
+
+Equation (1.3) also implies that: when $B = 0$, $A \ne 1$. Suppose $B = 0 \land A = 1$, then the left side would be
+$1 \cdot 2 = 2$ and the right side be $0 \cdot 0 = A = 1$. But we know $2 \ne 1$.
 
 These implications can further reduce table \ref{table:1.1.8-2b} down to 3 possibilities:
 
@@ -675,7 +678,7 @@ Therefore, $A = 2, B = 1, C = 0$. In other words, this is the only definition fo
 makes $F$ a field as defined as follows:
 \begin{enumerate}
   \item $0 \cdot 0 = 2 \in F$
-  \item $0 \cdot 1 = 0 \in F$ (Definition 1.1.5 (M2), (M4))
+  \item $0 \cdot 1 = 0 \in F$
   \item $0 \cdot 2 = 1 \in F$
   \item $1 \cdot 0 = 0 \in F$
   \item $1 \cdot 1 = 1 \in F$
@@ -690,32 +693,35 @@ which says $\forall x y, z \in F. (x \cdot (y + z) = x \cdot y + x \cdot z)$:
 \begin{enumerate}
   \item $0 \cdot (0 + 0) = 0 \cdot 0 + 0 \cdot 0$
   \item $0 \cdot (0 + 1) = 0 \cdot 0 + 0 \cdot 1$ (\colorbox{red}{wrong})
-  \item $0 \cdot (0 + 2) = 0 \cdot 0 + 0 \cdot 2$
-  \item $0 \cdot (1 + 0) = 0 \cdot 1 + 0 \cdot 0$
-  \item $0 \cdot (1 + 1) = 0 \cdot 1 + 0 \cdot 1$
-  \item $0 \cdot (1 + 2) = 0 \cdot 1 + 0 \cdot 2$
-  \item $0 \cdot (2 + 0) = 0 \cdot 2 + 0 \cdot 0$
-  \item $0 \cdot (2 + 1) = 0 \cdot 2 + 0 \cdot 1$
-  \item $0 \cdot (2 + 2) = 0 \cdot 2 + 0 \cdot 2$
-  \item $1 \cdot (0 + 0) = 1 \cdot 0 + 1 \cdot 0$
-  \item $1 \cdot (0 + 1) = 1 \cdot 0 + 1 \cdot 1$
-  \item $1 \cdot (0 + 2) = 1 \cdot 0 + 1 \cdot 2$
-  \item $1 \cdot (1 + 0) = 1 \cdot 1 + 1 \cdot 0$
-  \item $1 \cdot (1 + 1) = 1 \cdot 1 + 1 \cdot 1$
-  \item $1 \cdot (1 + 2) = 1 \cdot 1 + 1 \cdot 2$
-  \item $1 \cdot (2 + 0) = 1 \cdot 2 + 1 \cdot 0$
-  \item $1 \cdot (2 + 1) = 1 \cdot 2 + 1 \cdot 1$
-  \item $1 \cdot (2 + 2) = 1 \cdot 2 + 1 \cdot 2$
-  \item $2 \cdot (0 + 0) = 2 \cdot 0 + 2 \cdot 0$
-  \item $2 \cdot (0 + 1) = 2 \cdot 0 + 2 \cdot 1$
-  \item $2 \cdot (0 + 2) = 2 \cdot 0 + 2 \cdot 2$
-  \item $2 \cdot (1 + 0) = 2 \cdot 1 + 2 \cdot 0$
-  \item $2 \cdot (1 + 1) = 2 \cdot 1 + 2 \cdot 1$
-  \item $2 \cdot (1 + 2) = 2 \cdot 1 + 2 \cdot 2$
-  \item $2 \cdot (2 + 0) = 2 \cdot 2 + 2 \cdot 0$
-  \item $2 \cdot (2 + 1) = 2 \cdot 2 + 2 \cdot 1$
-  \item $2 \cdot (2 + 2) = 2 \cdot 2 + 2 \cdot 2$
+  \item $0 \cdot (0 + 2) = 0 \cdot 0 + 0 \cdot 2$ (\colorbox{red}{wrong})
+  \item $0 \cdot (1 + 0) = 0 \cdot 1 + 0 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $0 \cdot (1 + 1) = 0 \cdot 1 + 0 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $0 \cdot (1 + 2) = 0 \cdot 1 + 0 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $0 \cdot (2 + 0) = 0 \cdot 2 + 0 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $0 \cdot (2 + 1) = 0 \cdot 2 + 0 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $0 \cdot (2 + 2) = 0 \cdot 2 + 0 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (0 + 0) = 1 \cdot 0 + 1 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (0 + 1) = 1 \cdot 0 + 1 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (0 + 2) = 1 \cdot 0 + 1 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (1 + 0) = 1 \cdot 1 + 1 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (1 + 1) = 1 \cdot 1 + 1 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (1 + 2) = 1 \cdot 1 + 1 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (2 + 0) = 1 \cdot 2 + 1 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (2 + 1) = 1 \cdot 2 + 1 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $1 \cdot (2 + 2) = 1 \cdot 2 + 1 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (0 + 0) = 2 \cdot 0 + 2 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (0 + 1) = 2 \cdot 0 + 2 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (0 + 2) = 2 \cdot 0 + 2 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (1 + 0) = 2 \cdot 1 + 2 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (1 + 1) = 2 \cdot 1 + 2 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (1 + 2) = 2 \cdot 1 + 2 \cdot 2$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (2 + 0) = 2 \cdot 2 + 2 \cdot 0$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (2 + 1) = 2 \cdot 2 + 2 \cdot 1$ (\colorbox{yellow}{unverified})
+  \item $2 \cdot (2 + 2) = 2 \cdot 2 + 2 \cdot 2$ (\colorbox{yellow}{unverified})
 \end{enumerate}
+
+\colorbox{red}{TODO(ywen)}: The law of distribution isn't satisfies under the addition and
+multiplication I found above. What happened?
 
 % ------------------------------
 \subsubsection{Proof (b)}
